--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -42,10 +42,7 @@
 
 <!---->
 {% block userlinks %}
-<li
-  class="tooltip tooltip-right tooltip-primary"
-  data-tip="{% trans 'Home' %}"
->
+<li class="tooltip tooltip-right tooltip-primary" data-tip="{% trans 'Home' %}">
   <a
     href="/{{ LANGUAGE_CODE }}/api/"
     class="btn btn-square btn-soft btn-primary"
