--- a/tcn/ui/templates/ui/components/sidebar.html
+++ b/tcn/ui/templates/ui/components/sidebar.html
@@ -34,7 +34,7 @@
           aria-label="{% trans 'close sidebar' %}"
           class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
         >
-          <i data-lucide="menu" class="size-4 md:size-6"></i>
+          <i data-lucide="menu" class="size-4 lg:size-6"></i>
           <span class="sr-only">{% trans 'Open drawer' %}</span>
         </label>
       </li>
@@ -47,7 +47,7 @@
           href="{% pageurl home %}"
           class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
         >
-          <i data-lucide="home" class="size-4 md:size-6"></i>
+          <i data-lucide="home" class="size-4 lg:size-6"></i>
           <span class="sr-only">{% trans 'Home' %}</span>
         </a>
       </li>
@@ -62,7 +62,7 @@
           href="{% pageurl categories_index %}"
           class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
         >
-          <i data-lucide="layers" class="size-4 md:size-6"></i>
+          <i data-lucide="layers" class="size-4 lg:size-6"></i>
           <span class="sr-only">{% trans 'Categories' %}</span>
         </a>
       </li>
@@ -75,7 +75,7 @@
           href="{% slug_url 'categories' LANGUAGE_CODE %}"
           class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
         >
-          <i data-lucide="layers" class="size-4 md:size-6"></i>
+          <i data-lucide="layers" class="size-4 lg:size-6"></i>
           <span class="sr-only">{% trans 'Categories' %}</span>
         </a>
       </li>
@@ -89,7 +89,7 @@
           href="{% url 'ui:archive' %}"
           class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
         >
-          <i data-lucide="folder-archive" class="size-4 md:size-6"></i>
+          <i data-lucide="folder-archive" class="size-4 lg:size-6"></i>
           <span class="sr-only">{% trans 'Archive' %}</span>
         </a>
       </li>
@@ -164,7 +164,7 @@
             for="account-collapse"
             class="collapse-title btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
           >
-            <i data-lucide="user-circle" class="size-4 md:size-6"></i>
+            <i data-lucide="user-circle" class="size-4 lg:size-6"></i>
             <span class="sr-only">{% trans 'Account' %}</span>
           </label>
         </div>
