--- a/tcn/ui/templates/ui/contact_landing.html
+++ b/tcn/ui/templates/ui/contact_landing.html
@@ -18,7 +18,7 @@
           data-tip="{% trans 'Success' %}"
         >
           <span class="btn btn-xs btn-circle btn-success md:btn-sm">
-            <i class="size-4 md:size-6" data-lucide="check-circle2"></i>
+            <i class="size-4 lg:size-6" data-lucide="check-circle2"></i>
             <span class="sr-only">{% trans 'Success' %}</span>
           </span>
         </div>
