--- a/tcn/ui/templates/ui/index.html
+++ b/tcn/ui/templates/ui/index.html
@@ -130,7 +130,7 @@
       <hr class="bg-error" />
       <time class="timeline-start text-xs text-primary font-semibold">${timeAgo}</time>
       <div class="timeline-middle animate-pulse rounded-full">
-        <i class="size-4 text-error md:size-6" data-lucide="circle-alert"></i>
+        <i class="size-4 text-error lg:size-6" data-lucide="circle-alert"></i>
         <span class="sr-only">{% trans 'Breaking' %}</span>
       </div>
       <a 
