--- a/tcn/ui/templates/ui/search.html
+++ b/tcn/ui/templates/ui/search.html
@@ -18,7 +18,7 @@
     >
       <i
         data-lucide="search"
-        class="size-4 text-primary opacity-50 md:size-6 lg:size-8"
+        class="size-4 text-primary opacity-50 lg:size-6"
       ></i>
 
       <input
