--- a/tcn/ui/templates/ui/articles/archive/index.html
+++ b/tcn/ui/templates/ui/articles/archive/index.html
@@ -23,7 +23,7 @@
         >
           <i
             data-lucide="chevron-left"
-            class="size-4 md:size-6 rtl:rotate-180"
+            class="size-4 lg:size-6 rtl:rotate-180"
           ></i>
           <span class="sr-only">{% trans 'Previous' %}</span>
         </a>
@@ -41,7 +41,7 @@
         >
           <i
             data-lucide="chevron-right"
-            class="size-4 md:size-6 rtl:rotate-180"
+            class="size-4 lg:size-6 rtl:rotate-180"
           ></i>
           <span class="sr-only">{% trans 'Next' %}</span>
         </a>
